<resources>
    <string name="app_name">appSetting</string>


    <!-- Settings Iphone -->
    <string name="air_mode">Air Mode</string>
    <string name="wifi">Wi-Fi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="red_mobile">Red Mobile</string>
    <string name="battery">Battery</string>
    <string name="edit">Edit</string>
    <string name="dark_Mode">Dark Mode</string>


    <!-- Description BtnOptions -->
    <string name="permite_new_conecction">Permitir nuevas conexiones</string>
    <string name="wifi_description">Conectate a Wi-Fi, encuentra redes disponibles y administra la configuracion para conectarte a redes y puntos de xonexion cercanos.</string>
    <string name="bluetooth_description">Conectate con accesorios para reproducir musica, llamar por telefono y jugar.</string>
    <string name="redmobile_description">Enterate de la cantidad de datos que usas, establece restricciones de consumo de datos y administra la configuracion de tu operador, como las opciones de Esim y las llamadas por Wi-Fi.</string>
    <string name="permisso">Se dactivaron del centro de control las conexiones nuevas por Bluetooth</string>
    <string name="my_devices">Mis dispositivos</string>

    <string name="roamingIndo">Roaming de datos:</string>
    <string name="featureStateOff">Roaming desactivado</string>
    <string name="featureStateOn">Roaming activado</string>
    <string name="options">Opciones</string>
    <string name="textConsejo">Desactiva los datos celulares para restringir a WI-FI el trafico de datos(correo, internet, notificaciones, etc.).</string>
    <string name="activate_line">Activar esta linea</string>

</resources>