<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/roamingIndo"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <RadioGroup
        android:id="@+id/rgRoaming"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbOn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/featureStateOn"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/rbOff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/featureStateOff"
            android:textSize="12sp" />
    </RadioGroup>
</LinearLayout>