<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgountd_setting"
    tools:context=".bluetooth.DisplayBluetoothActivity">

    <include
        android:id="@+id/includedHeader"
        layout="@layout/layout_custom_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"/>

    <include
        android:id="@+id/includedContainer"
        layout="@layout/layout_custom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/includedHeader"
        android:layout_marginTop="25dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnpermisso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@color/white"
        android:layout_marginHorizontal="15dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintTop_toBottomOf="@id/includedContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingVertical="10dp"
            android:text="@string/permite_new_conecction"
            android:textColor="@color/btn_info"
            android:gravity="start"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvbtnpermisso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/permisso"
        android:layout_marginVertical="5dp"
        app:layout_constraintTop_toBottomOf="@+id/btnpermisso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="30dp"/>

    <TextView
        android:id="@+id/tvMyDevices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_devices"
        app:layout_constraintTop_toBottomOf="@id/tvbtnpermisso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"/>


    <!-- SECCIÓN DE MIS DISPOSITIVOS (Oculta por defecto) -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="7dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMyDevices"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRedes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:nestedScrollingEnabled="false"
            tools:listitem="@layout/item_bluetooth_device" />

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>